# RAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_STATUS.md  README.md  RUN.md  SETUP_SUMMARY.md  Version(2).md  Version(3.0).md  docker-compose.yml  entrypoint.sh  ingest.py  installer.sh  main.py  nohup.out  pyproject.toml  requirements.txt
.opencode/plans/: project_completion_plan.md
app/: __init__.py
app/ml/: README.md  __init__.py  alerts.py  dataset_builder.py  metrics.py  pipeline.py  scheduler.py  training_sink.py
data/: EMWA_proposal.txt  sample.txt
docs/: api_endpoints.md
faiss_store/: faiss.index  manifest.json  metadata.pkl
faiss_store_backup_384dim/: faiss.index  manifest.json
mcp_server/: run.py  server.py
mcp_server/tools/: directory.py  n8n_hook.py  (+2 more)
ml/: ML_PIPELINE.md
n8nemail/: AI email Automation.json  email.html  email2.html  email3.html  email4.html  email5.html
src/: api.py  data_loader.py  embedding.py  manifest.py  ocr_loader.py  search.py  vectorstore.py
symphony/: init.md
tests/: conftest.py  test_agent_state.py  test_api_tenders.py  test_content_drafting.py  test_data_loader.py  test_directory_scraper.py  test_e2e_pipeline.py  test_graph_execution.py  test_lead_node.py  test_mcp_tools.py  test_ml_integration.py  test_ml_training_pipeline.py  test_rag_chat_fallback.py  test_rag_embedding.py  test_rag_retrieval.py  test_rag_vectorstore.py  test_supervisor_routing.py  test_tender_node.py  test_training_dataset_events.py
ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+183 files in other folders)
