[project]
name = "ermirag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "mcp>=1.27.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "requests>=2.34.2",
]

[tool.pyright]
extraPaths = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
