[project]
name = "ermirag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "mcp>=1.27.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "langchain-ollama>=0.3.0",
    "langgraph>=0.5.0",
    "faiss-cpu>=1.10.0",
    "langchain-text-splitters>=1.1.2",
    "langchain-community>=0.4.2",
    "pypdf>=6.13.2",
    "unstructured>=0.23.0",
    "pillow>=12.2.0",
    "python-pptx>=1.0.2",
    "easyocr>=1.7.2",
]

[tool.pyright]
extraPaths = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
